--- a/nucleo_f103rb/ADC_AnalogWatchdog/ADC_AnalogWatchdog.ioc
+++ b/nucleo_f103rb/ADC_AnalogWatchdog/ADC_AnalogWatchdog.ioc
@@ -3,9 +3,10 @@ ADC1.AWD1HighThreshold=2559
 ADC1.AWD1ITMode=ENABLE
 ADC1.AWD1LowThreshold=512
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC1.ContinuousConvMode=ENABLE
+ADC1.ContinuousConvMode=DISABLE
 ADC1.EnableAnalogWatchDog=true
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,EnableAnalogWatchDog,WatchdogMode,AWD1HighThreshold,AWD1LowThreshold,AWD1ITMode
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T3_TRGO
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,EnableAnalogWatchDog,WatchdogMode,AWD1HighThreshold,AWD1LowThreshold,AWD1ITMode,ExternalTrigConv
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_41CYCLES_5
@@ -32,8 +33,9 @@ Mcu.IP1=DMA
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP5=TIM3
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -41,6 +43,7 @@ Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA14
 Mcu.Pin11=PB3
 Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
@@ -49,7 +52,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA13
-Mcu.PinsNb=13
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -181,9 +184,16 @@ SH.ADCx_IN4.0=ADC1_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+TIM3.IPParameters=TIM_MasterSlaveMode,TIM_MasterOutputTrigger,Prescaler,Period
+TIM3.Period=999
+TIM3.Prescaler=63
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-F103RB
 boardIOC=true
